@@ -1,10 +1,21 @@
 {
     "## Comment" = "Do NOT change this file, Gorm maintains it";
+    FirstResponder = {
+	Actions = (
+	    "addLanguage:",
+	    "removeLanguage:"
+	);
+	Super = NSObject;
+    };
     PCProjectInspector = {
 	Actions = (
+	    "addLanguage:",
+	    "removeLanguage:"
 	);
 	Outlets = (
-	    projectLanguagesView
+	    projectLanguagesView,
+	    languagesList,
+	    newLanguage
 	);
 	Super = NSObject;
     };
